--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "services.kayinleong.tech": {
+    "services.kayinleong.com": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/services.kayinleong.tech",
+            "outputPath": "dist/services.kayinleong.com",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -61,10 +61,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "services.kayinleong.tech:build:production"
+              "browserTarget": "services.kayinleong.com:build:production"
             },
             "development": {
-              "browserTarget": "services.kayinleong.tech:build:development"
+              "browserTarget": "services.kayinleong.com:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -72,7 +72,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "services.kayinleong.tech:build"
+            "browserTarget": "services.kayinleong.com:build"
           }
         },
         "test": {
