--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "services.kayinleong.tech",
+  "name": "services.kayinleong.com",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
